(lang dune 3.0)

 (generate_opam_files)



(source (github Octachron/roguetype))
 (license "LGPL-2.1-only WITH OCaml-LGPL-linking-exception")
(authors "Florian Angeletti")
(maintainers "octa@polychoron.fr")

(name roguetype)

(package
 (name roguetype)
 (synopsis "The first roguetype in the OCaml type system")
 (depends ocamlfind)
)
